// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test [Button] component Component [Button] should render correctly 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded shadow"
  data-testid="test-button-id"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Create New Meetup
</button>
`;

exports[`Test [Button] component Component [Button] should render correctly with default value Props 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded "
  disabled={false}
  type="button"
/>
`;
